# Gold-Standard-LOP-builder

./: .gitignore  00. Admin.code-workspace  AGENTS.md
02. Working documents/Pia/: .gitignore  lop-builder-dashboard.html  pyproject.toml
02. Working documents/Pia/1. Admin/Hamdi/agents/: ba-support-agent.md  loss-analysis-agent.md  mock-partner-agent.md  slide-approach-agent.md  slide-team-agent.md  slide-timeline-team-agent.md
02. Working documents/Pia/1. Admin/Hamdi/docs/: hamdi-agentic-lop-workplan.md  lop-workflow-diagram.html
02. Working documents/Pia/lop-agents-ui/: serve.ps1
02. Working documents/Pia/lop-agents-ui/static/: index-A-PF63DJYE.html  index.html
02. Working documents/Pia/output/: sample_lop.html
02. Working documents/Pia/src/lop_workflow/: __init__.py  __main__.py  cli.py  json_schema_export.py  pdf_compress.py  workspace_paths.py
02. Working documents/Pia/src/lop_workflow/agents/: __init__.py  coach.py  composer.py  ingestion.py  jasper_prompts.py  llm_client.py  pipeline_agents.py  planner.py  research.py  writers.py
02. Working documents/Pia/src/lop_workflow/corpus/: __init__.py  background_material.py  document_extract.py
02. Working documents/Pia/src/lop_workflow/export/: __init__.py  excel_export.py  html_export.py  html_simple.py  ppt_export.py  ppt_layouts.py
02. Working documents/Pia/src/lop_workflow/gold_patterns/: __init__.py  catalog.yaml  loader.py
02. Working documents/Pia/tests/: test_gold_builder.py  test_pdf_compress.py  test_smoke.py  test_workflow_extensions.py
docs/: mckinsey-document-standards.md
(+791 files in other folders)
